// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider     = "mysql"
  url          = env("DATABASE_URL")
  relationMode = "prisma"
}

model post {
  id          String        @id @default(cuid())
  creatorID   String
  createdAt   DateTime      @default(now())
  title       String        @db.VarChar(200)
  description String        @db.VarChar(3000)
  authors     String        @db.VarChar(300)
  year        Int           @db.Int
  university  String
  originlink  String
  imageURL    String        @db.VarChar(500)
  status      String
  rejection   String
  favs        userfavpost[]
  posttag     posttag[]

  @@index([creatorID])
}

model userfavpost {
  favID     String   @id @default(cuid())
  userID    String
  post      post     @relation(fields: [postID], references: [id])
  postID    String
  createdAt DateTime @default(now())

  @@unique([userID, postID])
}

model tag {
  id    String    @id @default(cuid())
  name  String    @unique
  posts posttag[]
}

model posttag {
  post   post   @relation(fields: [postId], references: [id])
  tag    tag    @relation(fields: [tagId], references: [id])
  postId String
  tagId  String

  @@id([postId, tagId])
}

model visionscore{
  id     String    @id @default(cuid())
  input  String    @db.VarChar(3000)
  output String    @db.VarChar(10000)
  score  Int  
}

model descriptionscore{
  id     String    @id @default(cuid())
  input  String    @db.VarChar(3000)
  output String    @db.VarChar(3000)
  score  Int  
}
